# OpenAgent

./: .claudeignore  .dockerignore  .gitignore  AGENTS.md  ANTIGRAVITY.md  CLAUDE.md  CURSOR.md  Dockerfile.debug  LICENSE  Makefile  README.md  docker-compose.yml  entrypoint.debug.sh  pyproject.toml  requirements.txt  run.sh  services.json  services.sh  stop.sh
.claude/: agno_cheatsheet.md  arch.md  build.md  rust.md  settings.json  settings.local.json  skills.md
.claude/hooks/: guard-bash.sh  guard-write.sh
app/: diary_store.py  main.py
app/openagent/observability/: otel.py
app/routes/: browser.py  chat.py  config.py  dashboard.py  diary.py  llm.py  logs.py  mcp_tester.py  provider.py  research.py  services.py  settings.py
app/static/: .gitkeep
app/templates/: _logs_static.html  _stats_cards.html  base.html  browser.html  chat.html  config.html  dashboard.html  diary.html  logs.html  mcp_tester.html  services.html  settings.html
app/tests/: __init__.py  test_main.py  test_memory.py
app/tests/routes/: __init__.py  test_config.py  test_dashboard.py  test_extensions.py  test_services.py
config/: channels.toml  openagent.toml  openagent.yaml.example
extensions/stt/: pyproject.toml
extensions/stt/src/stt/: plugin.py
extensions/stt/src/stt/providers/: __init__.py  deepgram.py  whisper.py
extensions/whatsapp/: pyproject.toml
extensions/whatsapp/src/: builders.py  filters.py  gateway.py  handlers.py  heartbeat.py  plugin.py  schema.py  session.py  transports.py
extensions/whatsapp/tests/: test_builders.py  test_filters.py  test_gateway.py  test_handlers.py  test_heartbeat.py  test_plugin.py  test_plugin_backends.py  test_schema.py  test_session.py  test_transports.py
openagent/: Cargo.toml  config.py  main.py  manager.py  settings_store.py
openagent/agent/: __init__.py  identity_tools.py  loop.py  tools.py
openagent/agent/middlewares/: __init__.py  whitelist.py
openagent/bus/: __init__.py  bus.py  events.py
openagent/channels/: __init__.py  adapter.py  discord.py  manager.py  mcplite.py  telegram.py  whatsapp.py
openagent/heartbeat/: __init__.py  service.py
openagent/observability/: __init__.py  context.py  logging.py  metrics.py  otel.py
openagent/providers/: __init__.py  anthropic.py  base.py  config.py  cortex.py  openai.py  openai_compat.py
openagent/services/: manager.py
openagent/session/: __init__.py  backend.py  manager.py  sqlite.py
openagent/src/: config.rs  console.rs  dispatch.rs  main.rs  manager.rs  manifest.rs  mcplite.rs  multimodal.rs  providers.rs  routes.rs  server.rs  state.rs
openagent/src/agent/: memory_adapter.rs  prompt.rs  tool_router.rs
openagent/src/agent/action/: catalog.rs
openagent/src/channels/: adapter.rs  cli.rs  config.rs  discord.rs  imessage.rs  irc.rs  mattermost.rs  media_pipeline.rs  mod.rs  mqtt.rs  reddit.rs  registry.rs  signal.rs  slack.rs  stall_watchdog.rs  telegram.rs  transcription.rs  tts.rs  twitter.rs  whatsapp.rs  whatsapp_storage.rs  whatsapp_web.rs
openagent/src/config/: channel_types.rs  mod.rs
openagent/src/cron/: mod.rs  schedule.rs  scheduler.rs  store.rs  tools.rs  types.rs
openagent/src/security/: mod.rs  pairing.rs
openagent/src/server/: middleware.rs  mod.rs  routes.rs  state.rs  stt.rs  tts.rs
openagent/src/service/: mod.rs
openagent/tests/: test_agent_loop.py  test_bus.py  test_config.py  test_cortex_provider.py  test_heartbeat_service.py  test_identity_tools.py  test_main.py  test_manager.py  test_observability.py  test_protocol.py  test_providers.py  test_service_manager.py  test_session.py
openagent/tests/channels/: __init__.py  test_adapter.py  test_discord.py  test_mcplite.py  test_telegram.py  test_web_adapter.py
scripts/: install-systemd.sh
services/browser/: Cargo.toml  service.json
services/browser/src/: cache.rs  extract.rs  fetch.rs  handlers.rs  lib.rs  main.rs  metrics.rs  tools.rs
services/browser/tests/: e2e.rs  integration.rs  manual_test.py
services/channels/: Cargo.toml  service.json
services/channels/src/: adapter.rs  address.rs  config.rs  main.rs  registry.rs
services/cortex/: Cargo.toml  README.md  TODO.md  service.json
services/cortex/src/: agent.rs  config.rs  diary.rs  handlers.rs  llm.rs  main.rs  memory_adapter.rs  metrics.rs  response.rs  step_service.rs  tool_router.rs  tools.rs  validator.rs
services/cortex/src/action/: catalog.rs
services/discord/: Cargo.toml  README.md  go.mod  main.go  main_test.go  service.json
services/discord/src/: handlers.rs  main.rs  metrics.rs  tools.rs
services/filesystem/: go.mod  main.go  main_test.go  service.json
services/guard/: service.json
services/guard/src/: handlers.rs  main.rs
services/hello/: go.mod  main.go  main_test.go  service.json
services/memory/: Cargo.toml  README.md  service.json
services/memory/src/: db.rs  handlers.rs  main.rs  metrics.rs  tools.rs
services/research/: service.json
services/research/src/: db.rs  main.rs  tools.rs
services/sandbox/: Cargo.toml  service.json
services/sdk-go/: README.md  go.mod
services/sdk-rust/: Cargo.toml
services/sdk-rust/src/: codec.rs  error.rs  lib.rs  otel.rs  server.rs
services/shell/: go.mod  service.json
services/slack/: Cargo.toml  README.md  go.mod  main.go  main_test.go  service.json
services/slack/src/: dispatch.rs  handlers.rs  main.rs  metrics.rs  state.rs  tools.rs
services/stt/: Cargo.toml  service.json
services/stt/src/: audio.rs  handlers.rs  main.rs  metrics.rs  tools.rs
services/telegram/: Cargo.toml  README.md  go.mod  go.sum  main.go  main_test.go  service.json
services/telegram/src/: main.rs
services/tts/: Cargo.toml  README.md  service.json
services/validator/: Cargo.toml  service.json
services/validator/src/: main.rs
services/whatsapp/: README.md  conn.go  extract.go  go.mod  logger.go  main.go  main_test.go  media.go  runtime.go  server.go  service.json
skills/agent-browser/: SKILL.md
skills/browser/: SKILL.md
skills/rust-guidelines/: SKILL.md
skills/youtube-transcript/: SKILL.md
src/openagent/: __init__.py  interfaces.py  main.py  manager.py
(+18 files in other folders)
