[package]
name = "openagent"
version = "0.1.0"
edition = "2021"
description = "OpenAgent Rust runtime — service manager, MCP-lite client, Axum control plane"

[[bin]]
name = "openagent"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4"] }
glob = "0.3"
toml = "0.8"
mimalloc = { version = "0.1", default-features = false }
axum = "0.7"
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
http = "1"

# OpenTelemetry — three-pillar observability (traces, logs, metrics)
opentelemetry        = { version = "0.27", features = ["trace", "logs", "metrics"] }
opentelemetry_sdk    = { version = "0.27", features = ["trace", "logs", "metrics", "rt-tokio"] }
opentelemetry-otlp   = { version = "0.27", default-features = false, features = ["trace", "logs", "http-proto", "reqwest-client", "reqwest-rustls"] }
opentelemetry-appender-tracing = { version = "0.27", default-features = false }
tracing-opentelemetry = "0.28"
tracing-appender      = "0.2"
async-trait           = "0.1"
futures-util          = "0.3"
hex                   = "0.4"
rusqlite              = { version = "0.37", features = ["bundled"] }
libc                  = "0.2"
cron = "0.16.0"
tokio-serial = "5.4.5"
tokio-tungstenite = "0.29.0"
async-imap = { version = "0.11", features = ["runtime-tokio"], default-features = false }
tokio-rustls = "0.26.4"

# Agent module (moved from services/cortex/)
sdk-rust          = { path = "../services/sdk-rust" }
autoagents-llm    = { version = "0.3.6", features = ["openai", "anthropic"] }
autoagents-core   = "0.3.6"
autoagents-protocol = "0.3.6"
minijinja         = "2"
futures           = "0.3"
serde_yaml        = "0.9"

# Channels module — inline implementations (vendor/zeroclaw removed)
url              = "2.5"
rustls           = { version = "0.23", features = ["ring"] }
reqwest          = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart", "stream"] }
parking_lot      = "0.12"
portable-atomic  = "1"
regex            = "1"
rand             = "0.8"
image            = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
base64           = "0.22"
chrono           = { version = "0.4", default-features = false, features = ["clock", "std"] }
chrono-tz        = "0.10"
directories      = "6"
hostname         = "0.4"
webpki-roots     = "1"

[dev-dependencies]
tempfile = "3"

[lints.rust]
ambiguous_negative_literals = "warn"
missing_debug_implementations = "warn"
redundant_imports = "warn"
redundant_lifetimes = "warn"
trivial_numeric_casts = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_lifetimes = "warn"

[lints.clippy]
cargo = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
literal_string_with_formatting_args = "allow"
