[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openagent-whatsapp"
version = "0.1.0"
description = "WhatsApp extension for OpenAgent."
requires-python = ">=3.11"
dependencies = [
    "neonize>=0.1.0",
    "openagent-core",
]

[project.entry-points."openagent.extensions"]
whatsapp = "plugin:WhatsAppExtension"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = [
    "plugin",
    "gateway",
    "handlers",
    "builders",
    "filters",
    "schema",
    "session",
    "heartbeat",
]

[tool.setuptools.packages.find]
where = ["src"]
