[package]
name = "browser"
version = "0.3.0"
edition = "2021"

[lib]
name = "browser_lib"
path = "src/lib.rs"

[[bin]]
name = "browser"
path = "src/main.rs"

[dependencies]
sdk-rust      = { path = "../sdk-rust" }
mimalloc      = { version = "0.1", default-features = false }
tokio         = { version = "1", features = ["rt-multi-thread", "macros"] }
serde         = { version = "1.0", features = ["derive"] }
serde_json    = "1.0"
reqwest       = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rustls        = { version = "0.23", features = ["ring"] }
dom_smoothie  = "0.17"
tracing       = "0.1"
opentelemetry = { version = "0.27", features = ["trace"] }
anyhow        = "1.0"

[dev-dependencies]
mockito = "1"

[lints.rust]
ambiguous_negative_literals    = "warn"
missing_debug_implementations  = "warn"
redundant_imports              = "warn"
redundant_lifetimes            = "warn"
trivial_numeric_casts          = "warn"
unsafe_op_in_unsafe_fn         = "warn"
unused_lifetimes               = "warn"

[lints.clippy]
cargo      = { level = "warn", priority = -1 }
complexity  = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
pedantic    = { level = "warn", priority = -1 }
perf        = { level = "warn", priority = -1 }
style       = { level = "warn", priority = -1 }
suspicious  = { level = "warn", priority = -1 }

# Restriction group — drives consistency and quality
allow_attributes_without_reason    = "warn"
as_pointer_underscore              = "warn"
assertions_on_result_states        = "warn"
clone_on_ref_ptr                   = "warn"
deref_by_slicing                   = "warn"
disallowed_script_idents           = "warn"
empty_drop                         = "warn"
empty_enum_variants_with_brackets  = "warn"
empty_structs_with_brackets        = "warn"
fn_to_numeric_cast_any             = "warn"
if_then_some_else_none             = "warn"
map_err_ignore                     = "warn"
redundant_type_annotations         = "warn"
renamed_function_params            = "warn"
semicolon_outside_block            = "warn"
string_to_string                   = "warn"
undocumented_unsafe_blocks         = "warn"
unnecessary_safety_comment         = "warn"
unnecessary_safety_doc             = "warn"
unneeded_field_pattern             = "warn"
unused_result_ok                   = "warn"
# Allow: structured logging uses literal strings with template syntax
literal_string_with_formatting_args = "allow"
