[package]
name = "channels"
version = "0.2.0"
edition = "2021"

[dependencies]
# zeroclaw: canonical Channel trait + all platform implementations
# default-features = false: skip prometheus + nostr (extras we don't need)
zeroclaw = { package = "zeroclawlabs", path = "../../vendor/zeroclaw", default-features = false }

# OpenAgent SDK — MCP-lite server, OTEL, metrics helpers
sdk-rust = { path = "../sdk-rust" }

# Config
dotenvy = "0.15"
toml = "1.0"

# Async
async-trait = "0.1"
tokio = { version = "1.36", features = ["full"] }

# Error handling + serde
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# URL routing for ChannelAddress
url = "2.5"

# Logging
tracing = "0.1"
