[package]
name = "cortex"
version = "0.2.0"
edition = "2021"
description = "Agentic Operating System — Rust-based agent loop and orchestration"

[dependencies]
# MCP-lite (sdk-rust)
sdk-rust = { path = "../sdk-rust" }

# Runtime
tokio = { version = "1.42", features = ["rt-multi-thread", "macros", "fs", "io-util", "net", "time"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Error handling
anyhow = "1.0"

# Prompt templating — Jinja2-compatible, minimal binary footprint (no regex dep)
minijinja = "2"

# LLM provider abstraction
autoagents-llm = { version = "0.3.6", features = ["openai", "anthropic"] }

# Agent framework — CortexAgent implements AgentDeriveT + AgentExecutor + AgentHooks
autoagents-core = "0.3.6"
# Protocol types (Event, ActorID) — used for BaseAgent channel construction
autoagents-protocol = "0.3.6"

# Async trait support for autoagents-core trait impls
async-trait = "0.1"

# Stream accumulation for LLM streaming
futures = "0.3"

# Observability
tracing = "0.1"
opentelemetry = { version = "0.27", features = ["trace"] }
tracing-opentelemetry = "0.28"

[lints.rust]
ambiguous_negative_literals    = "warn"
missing_debug_implementations  = "warn"
redundant_imports              = "warn"
redundant_lifetimes            = "warn"
trivial_numeric_casts          = "warn"
unsafe_op_in_unsafe_fn         = "warn"
unused_lifetimes               = "warn"

[lints.clippy]
cargo       = { level = "warn", priority = -1 }
complexity  = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
pedantic    = { level = "warn", priority = -1 }
perf        = { level = "warn", priority = -1 }
style       = { level = "warn", priority = -1 }
suspicious  = { level = "warn", priority = -1 }

# Restriction group — explicit allowlist of high-value lints.
# Must be listed individually; `restriction` as a group enables too many noisy lints.
allow_attributes_without_reason = "warn"
clone_on_ref_ptr                = "warn"
dbg_macro                       = "warn"
empty_drop                      = "warn"
exit                            = "warn"
filetype_is_file                = "warn"
float_arithmetic                = "warn"
get_unwrap                      = "warn"
if_then_some_else_none          = "warn"
lossy_float_literal             = "warn"
map_err_ignore                  = "warn"
mem_forget                      = "warn"
missing_docs_in_private_items   = "allow"  # too noisy for service internals
panic                           = "warn"
print_stderr                    = "warn"
print_stdout                    = "warn"
rc_buffer                       = "warn"
rest_pat_in_fully_bound_structs = "warn"
str_to_string                   = "warn"
todo                            = "warn"
unimplemented                   = "warn"
unnecessary_self_imports        = "warn"
unwrap_used                     = "warn"
use_debug                       = "warn"
