[package]
name = "memory"
version = "0.2.0"
edition = "2021"
description = "Agentic Memory MCP-lite service — LanceDB + FastEmbed, LTS/STS vector stores"

[dependencies]
# MCP-lite (sdk-rust)
sdk-rust = { path = "../sdk-rust" }

# Allocator
mimalloc = { version = "0.1", default-features = false }

# Vector engine
lancedb = "0.26"

# Embeddings — local ONNX
fastembed = { version = "5", default-features = false, features = ["hf-hub-rustls-tls"] }
# ort (ONNX Runtime) — must explicitly opt in to binary download
ort = { version = "2.0.0-rc.11", features = ["coreml", "download-binaries"] }

# Arrow for LanceDB schema — must match lancedb's internal arrow version (57)
arrow-array = "57"
arrow-schema = "57"

# Runtime
tokio = { version = "1.42", features = ["rt-multi-thread", "macros", "sync", "net"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"

# Utilities
uuid = { version = "1", features = ["v4"] }

# Observability
tracing = "0.1"
opentelemetry = { version = "0.27", features = ["trace"] }
hex = "0.4"

# Async streams (for try_collect on LanceDB result streams)
futures = "0.3"

[lints.rust]
ambiguous_negative_literals    = "warn"
missing_debug_implementations  = "warn"
redundant_imports              = "warn"
redundant_lifetimes            = "warn"
trivial_numeric_casts          = "warn"
unsafe_op_in_unsafe_fn         = "warn"
unused_lifetimes               = "warn"

[lints.clippy]
cargo      = { level = "warn", priority = -1 }
complexity  = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
pedantic    = { level = "warn", priority = -1 }
perf        = { level = "warn", priority = -1 }
style       = { level = "warn", priority = -1 }
suspicious  = { level = "warn", priority = -1 }

allow_attributes_without_reason    = "warn"
as_pointer_underscore              = "warn"
assertions_on_result_states        = "warn"
clone_on_ref_ptr                   = "warn"
deref_by_slicing                   = "warn"
disallowed_script_idents           = "warn"
empty_drop                         = "warn"
empty_enum_variants_with_brackets  = "warn"
empty_structs_with_brackets        = "warn"
fn_to_numeric_cast_any             = "warn"
if_then_some_else_none             = "warn"
map_err_ignore                     = "warn"
redundant_type_annotations         = "warn"
renamed_function_params            = "warn"
semicolon_outside_block            = "warn"
string_to_string                   = "warn"
undocumented_unsafe_blocks         = "warn"
unnecessary_safety_comment         = "warn"
unnecessary_safety_doc             = "warn"
unneeded_field_pattern             = "warn"
unused_result_ok                   = "warn"
literal_string_with_formatting_args = "allow"

[profile.release]
opt-level     = 3
lto           = "fat"
codegen-units = 1
panic         = "abort"
strip         = true

[profile.bench]
inherits = "release"
debug    = true
strip    = false
