[package]
name = "sdk-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio           = { version = "1.42", features = ["net", "io-util", "rt-multi-thread", "macros", "sync"] }
serde           = { version = "1.0", features = ["derive"] }
serde_json      = "1.0"
tracing         = "0.1"
anyhow          = "1.0"
futures-util    = "0.3"
hex             = "0.4"

# OpenTelemetry — OTLP/JSON file tracing + standard OTLP/HTTP export to Jaeger
opentelemetry        = { version = "0.27", features = ["trace"] }
opentelemetry_sdk    = { version = "0.27", features = ["trace", "rt-tokio"] }
# opentelemetry-otlp: standard OTLP/HTTP exporter for Jaeger / any collector.
# reqwest-rustls: async reqwest with rustls TLS — no openssl dep, works on musl.
opentelemetry-otlp   = { version = "0.27", default-features = false, features = ["trace", "http-proto", "reqwest-rustls"] }

tracing-opentelemetry = "0.28"
tracing-subscriber   = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender     = "0.2"

[lints.rust]
ambiguous_negative_literals    = "warn"
missing_debug_implementations  = "warn"
redundant_imports              = "warn"
redundant_lifetimes            = "warn"
trivial_numeric_casts          = "warn"
unsafe_op_in_unsafe_fn         = "warn"
unused_lifetimes               = "warn"

[lints.clippy]
cargo      = { level = "warn", priority = -1 }
complexity  = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
pedantic    = { level = "warn", priority = -1 }
perf        = { level = "warn", priority = -1 }
style       = { level = "warn", priority = -1 }
suspicious  = { level = "warn", priority = -1 }

allow_attributes_without_reason    = "warn"
as_pointer_underscore              = "warn"
assertions_on_result_states        = "warn"
clone_on_ref_ptr                   = "warn"
deref_by_slicing                   = "warn"
disallowed_script_idents           = "warn"
empty_drop                         = "warn"
empty_enum_variants_with_brackets  = "warn"
empty_structs_with_brackets        = "warn"
fn_to_numeric_cast_any             = "warn"
if_then_some_else_none             = "warn"
map_err_ignore                     = "warn"
redundant_type_annotations         = "warn"
renamed_function_params            = "warn"
semicolon_outside_block            = "warn"
string_to_string                   = "warn"
undocumented_unsafe_blocks         = "warn"
unnecessary_safety_comment         = "warn"
unnecessary_safety_doc             = "warn"
unneeded_field_pattern             = "warn"
unused_result_ok                   = "warn"
literal_string_with_formatting_args = "allow"
