[package]
name = "slack"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "slack"
path = "src/main.rs"

[dependencies]
sdk-rust   = { path = "../sdk-rust" }
slack-morphism = { version = "2", default-features = false, features = ["hyper"] }
rvstruct    = "0.3"
tokio      = { version = "1", features = ["full"] }
serde_json = "1"
anyhow     = "1"
mimalloc   = { version = "0.1", default-features = false }
tracing    = "0.1"

[lints.rust]
ambiguous_negative_literals    = "warn"
missing_debug_implementations  = "warn"
redundant_imports              = "warn"
redundant_lifetimes            = "warn"
trivial_numeric_casts           = "warn"
unsafe_op_in_unsafe_fn         = "warn"
unused_lifetimes               = "warn"

[lints.clippy]
cargo      = { level = "warn", priority = -1 }
complexity  = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
pedantic    = { level = "warn", priority = -1 }
perf        = { level = "warn", priority = -1 }
style       = { level = "warn", priority = -1 }
suspicious  = { level = "warn", priority = -1 }
literal_string_with_formatting_args = "allow"
