[package]
name = "stt"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "stt"
path = "src/main.rs"

[dependencies]
sdk-rust        = { path = "../sdk-rust" }
# whisper-rs wraps whisper.cpp; Metal enabled automatically on Apple Silicon.
# On Linux builds via `cross`, ensure libstdc++ is available.
whisper-rs      = "0.13"
tokio           = { version = "1", features = ["full"] }
serde_json      = "1"
anyhow          = "1"
mimalloc        = { version = "0.1", default-features = false }
tracing         = "0.1"
opentelemetry   = { version = "0.27", features = ["trace"] }
hex             = "0.4"

[lints.rust]
ambiguous_negative_literals    = "warn"
missing_debug_implementations  = "warn"
redundant_imports              = "warn"
redundant_lifetimes            = "warn"
trivial_numeric_casts          = "warn"
unsafe_op_in_unsafe_fn         = "warn"
unused_lifetimes               = "warn"

[lints.clippy]
cargo      = { level = "warn", priority = -1 }
complexity  = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
pedantic    = { level = "warn", priority = -1 }
perf        = { level = "warn", priority = -1 }
style       = { level = "warn", priority = -1 }
suspicious  = { level = "warn", priority = -1 }
literal_string_with_formatting_args = "allow"
