[package]
name = "validator"
version = "0.2.0"
edition = "2021"
description = "JSON repair MCP-lite service for malformed LLM outputs"

[[bin]]
name = "validator"
path = "src/main.rs"

[dependencies]
sdk-rust = { path = "../sdk-rust" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
opentelemetry = { version = "0.27", features = ["trace"] }
mimalloc = { version = "0.1", default-features = false }
llm_json = "1.0.2"

[lints.rust]
ambiguous_negative_literals = "warn"
missing_debug_implementations = "warn"
redundant_imports = "warn"
redundant_lifetimes = "warn"
trivial_numeric_casts = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_lifetimes = "warn"

[lints.clippy]
cargo = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
literal_string_with_formatting_args = "allow"

[profile.release]
opt-level     = 3
lto           = "fat"
codegen-units = 1
panic         = "abort"
strip         = true

[profile.bench]
inherits = "release"
debug    = true
strip    = false
